<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Common -->
    <string name="scout_default_name">Scout %d</string>
    <string-array name="template_new_options">
        <item>Match Scout</item>
        <item>Pit Scout</item>
        <item>Blank Scout</item>
    </string-array>
    <string name="add_scout_selector_title">Add scout from template</string>
    <string name="template_set_default_title">Set as default template</string>
    <string name="number_too_big_error">Please enter a number between 0 and 2^63 – 1</string>

    <!-- Media upload -->
    <string name="media_upload_reminder">
        Take <b>clear</b> pictures of <b>robots</b> <i>only</i>.
    </string>
    <string name="media_write_storage_rationale">
        Robot Scouter needs access to your storage to save your photo.
    </string>
    <string name="media_should_upload_title">Upload media to The Blue Alliance?</string>
    <string name="media_should_upload_rationale">
        If you choose to opt-in, your media will be shared with
        <a href="https://thebluealliance.com">The Blue Alliance</a> to help other Robot Scouter
        users and the greater TBA community.\n\nPlease <b>read this</b>:\n  ●
        Real people review your suggestions, be graciously professional.\n  ●
        Only take pictures of robots.\n  ●
        Ensure the robot is clearly visible.
    </string>
    <string name="media_save_response_title">Don\'t remind me again</string>

    <!-- Sharing -->
    <plurals name="team_share_title">
        <item quantity="one">Share team %s</item>
        <item quantity="other">Share teams %s</item>
    </plurals>
    <plurals name="team_share_message">
        <item quantity="one">You’re invited to edit team %s with me in Robot Scouter!</item>
        <item quantity="other">You’re invited to edit teams %s with me in Robot Scouter!</item>
    </plurals>
    <plurals name="team_share_cta">
        <item quantity="one">Import team %s into Robot Scouter</item>
        <item quantity="other">Import teams %s into Robot Scouter</item>
    </plurals>

    <!-- Team details -->
    <string name="details_title">Team details</string>
    <string name="details_name_hint">Team name</string>
    <string name="details_media_hint">Team media url</string>
    <string name="details_website_hint">Team website</string>
    <string name="details_malformed_url_error">Make sure you have a valid url.</string>
    <string name="details_action_visit_tba_title" translatable="false">TBA</string>
    <string name="details_action_visit_website_title">Website</string>
    <string name="accessibility_robot_icon">A picture of the team’s robot.</string>
    <string name="accessibility_edit_team_name">Edit the team name</string>

    <!-- Rating dialog -->
    <string name="rate_title">Enjoying Robot Scouter?</string>
    <string name="rate_message">
        While you’re waiting to get your scouting results, please rate Robot Scouter!
    </string>
    <string name="rate_positive">Rate</string>
    <string name="rate_negative">Never mind</string>
    <string name="rate_neutral">Remind me later</string>

    <!-- Update dialog -->
    <string name="update_title">Update</string>
    <string name="update_required_title">Update Robot Scouter</string>
</resources>
