<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RobotScouter.Dialog"
    tools:layout_height="match_parent"
    tools:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/media"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:contentDescription="@string/accessibility_robot_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@tools:sample/avatars" />

            <com.supercilex.robotscouter.core.ui.views.ContentLoadingProgressBar
                android:id="@+id/progress"
                style="@style/Base.Widget.AppCompat.ProgressBar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/media"
                app:layout_constraintEnd_toEndOf="@id/media"
                app:layout_constraintTop_toTopOf="@id/media"
                app:layout_constraintBottom_toBottomOf="@id/media" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/accessibility_robot_icon"
                app:layout_constraintStart_toStartOf="@id/media"
                app:layout_constraintEnd_toEndOf="@id/media"
                app:layout_constraintTop_toTopOf="@id/media"
                app:layout_constraintBottom_toBottomOf="@id/media"
                app:srcCompat="@drawable/ic_add_a_photo_colorable_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.emoji.widget.EmojiAppCompatTextView
                android:id="@+id/name"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_large"
                android:paddingBottom="@dimen/spacing_large"
                android:gravity="center"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="2521 - SERT" />

            <com.supercilex.robotscouter.core.ui.views.SupportVectorDrawablesImageButton
                android:id="@+id/editNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/accessibility_edit_team_name"
                app:layout_constraintStart_toEndOf="@id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/name"
                app:layout_constraintBottom_toBottomOf="@id/name"
                app:iconDrawable="@drawable/ic_mode_edit_colorable_24dp"
                app:iconStyle="@style/Icon.Black"
                app:layout_constraintHorizontal_bias="0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_large"
                android:hint="@string/details_name_hint"
                android:visibility="gone">

                <androidx.emoji.widget.EmojiAppCompatEditText
                    android:id="@+id/nameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_large">

            <com.supercilex.robotscouter.core.ui.views.SupportVectorDrawablesButton
                android:id="@+id/linkTba"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_large"
                android:text="@string/details_action_visit_tba_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/center"
                app:drawableStartCompat="@drawable/ic_launch_colorable_24dp"
                app:iconStyle="@style/Icon.Accent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/center"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.supercilex.robotscouter.core.ui.views.SupportVectorDrawablesButton
                android:id="@+id/linkWebsite"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_large"
                android:text="@string/details_action_visit_website_title"
                app:layout_constraintStart_toEndOf="@id/center"
                app:layout_constraintEnd_toEndOf="parent"
                app:drawableStartCompat="@drawable/ic_launch_colorable_24dp"
                app:iconStyle="@style/Icon.Accent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mediaLayout"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal"
            android:hint="@string/details_media_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mediaEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/websiteLayout"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/details_website_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/websiteEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.supercilex.robotscouter.core.ui.views.SupportVectorDrawablesTextView
            android:id="@+id/save"
            style="@style/RobotScouter.BottomSheet.Button.Compat"
            android:text="@string/save"
            app:drawableStartCompat="@drawable/ic_check_grey_24dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
